@@ -1,3 +1,3 @@
 #!/usr/bin/env python
-from picard.tagger import main; main('%(localedir)s')
+from picard.tagger import main; main('%(localedir)s', %(autoupdate)s)
 
