@@ -7,5 +7,5 @@ sys.path.insert(0, '.')
 from picard.tagger import main
 
 localedir = os.path.join(os.path.dirname(sys.argv[0]), 'locale')
-main(localedir)
+main(localedir, True)
 
